# VoxCraft

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  README_CN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_model_library.py  0003_model_timestamps.py  0004_job_source_path.py  0005_llm_api_key.py  0006_job_warnings.py
scripts/: cleanup_outputs.py  dev.sh  download_models.sh
src/voxcraft/: config.py  errors.py  logging.py  main.py
src/voxcraft/api/: admin.py  admin_llm.py  admin_settings.py  business.py  error_handlers.py  events.py  health.py  jobs.py  models_library.py  oai_compat.py  video_translate.py  voices.py
src/voxcraft/api/schemas/: asr.py  common.py  job.py  llm.py  model_library.py  oai.py  provider.py  proxy.py  separate.py  system.py  tts.py  video_translate.py
src/voxcraft/db/: bootstrap.py  engine.py  migrate.py  models.py
src/voxcraft/events/: bus.py
src/voxcraft/llm/: __init__.py  client.py
src/voxcraft/models_lib/: catalog.py  downloader.py  service.py
src/voxcraft/providers/: base.py  capabilities.py  mock.py  registry.py
src/voxcraft/providers/asr/: whisper.py
src/voxcraft/providers/cloning/: gpt_sovits.py  indextts.py  voxcpm.py
src/voxcraft/providers/separator/: demucs.py
src/voxcraft/providers/tts/: piper.py
src/voxcraft/runtime/: gpu.py  lru.py  pool_scheduler.py  proxy.py  scheduler.py  scheduler_api.py  worker_process.py  worker_runners.py
src/voxcraft/video/: __init__.py  alignment.py  ffmpeg_io.py  orchestrator.py  subtitle.py
tests/: conftest.py
tests/e2e/: test_asr_whisper.py  test_tts_piper.py  test_video_translate_e2e.py
tests/integration/: test_admin.py  test_admin_llm.py  test_asr.py  test_clone.py  test_health.py  test_jobs.py  test_models_library.py  test_mvp_smoke.py  test_oai_compat.py  test_pool_scheduler.py  test_separate.py  test_tts.py  test_video_translate_api.py  test_voices_extract.py
tests/unit/: test_alignment.py  test_base.py  test_bootstrap.py  test_bootstrap_scan.py  test_bus.py  test_capabilities.py  test_catalog.py  test_cleanup_outputs.py  test_downloader.py  test_ffmpeg_io.py  test_gpt_sovits.py  test_gpu.py  test_interrupted.py  test_llm_client.py  test_lru.py  test_model_service.py  test_models.py  test_piper.py  test_provider_stubs.py  test_proxy.py  test_registry.py  test_scheduler.py  test_video_orchestrator.py  test_voxcpm.py  test_whisper.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: client.ts  jobs.ts  llm.ts  modelsLibrary.ts  providers.ts  proxy.ts  system.ts  videoTranslate.ts  voices.ts
web/src/components/: CapabilityPageTemplate.tsx  GpuGauge.tsx  JobBadges.tsx  JobCard.tsx  JobDetailsModal.tsx  JsonViewer.tsx  ModelCatalogCard.tsx  StatusTag.tsx  TaskCreationDrawer.tsx  VideoTranslateDetails.tsx  VoiceCard.tsx
web/src/drawers/: AsrDrawer.tsx  CloningDrawer.tsx  CustomModelDrawer.tsx  ExtractVoiceDrawer.tsx  SeparatorDrawer.tsx  TtsDrawer.tsx  VideoTranslateDrawer.tsx
web/src/hooks/: useElapsed.ts  useJobListStream.ts  useSse.ts
web/src/i18n/: zh-CN.ts
web/src/layouts/: MainLayout.tsx  SettingsLayout.tsx
web/src/pages/: Dashboard.tsx  Placeholder.tsx
web/src/pages/asr/: AsrPage.tsx
web/src/pages/cloning/: CloningPage.tsx  HistoryTab.tsx  VoicesTab.tsx
web/src/pages/separator/: SeparatorPage.tsx
web/src/pages/settings/: GlobalJobsQueue.tsx  LlmConfig.tsx  ModelsLibrary.tsx  ModelsManage.tsx  ProxySettings.tsx  SystemDiagnosis.tsx
web/src/pages/tts/: TtsPage.tsx
web/src/pages/video-translate/: VideoTranslatePage.tsx
web/src/routes/: index.tsx
web/src/stores/: SystemContext.tsx
web/src/styles/: global.scss  semi-override.scss  tokens.scss
web/src/types/: api.ts
web/src/utils/: format.ts
