[project]
name = "voxcraft"
version = "0.1.0"
description = "自托管多模态音频推理服务 (ASR / TTS / 克隆 / 人声分离)"
# OpenVoice v2 集成需要：MeloTTS 上游 numpy<2 / 自身 transitive deps（pyopenjtalk/jamo 等）
# 在 cp313 上无 wheel；OpenVoice 也只测到 3.11。降 Python 到 3.11 是 OpenVoice
# 集成的硬前提。voxcpm/torch 2.6/whisper 在 3.11 上同样 OK
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "structlog>=24.4",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0",
    "faster-whisper>=1.0",
    "piper-tts>=1.4.2",
    "modelscope>=1.36.1",
    "openai>=1.50",
    "ffmpeg-python>=0.2.0",
    "zhconv>=1.4.3",
    # GPU 支持：
    # - torch：VoxCPM / IndexTTS / Demucs 系 provider 需要；/health 探测优先用它
    # - nvidia-ml-py：torch 未加载场景（CPU 部署、mac 开发）下对 GPU 的轻量探测兜底
    # torch 2.6 默认 PyPI wheel Linux 自带 CUDA 12.4 runtime（向下兼容驱动 ≥ 525）、
    # mac arm64 自带 CPU/MPS wheel，无需自定义索引。仍支持 Pascal (sm_61)，2.7 才会砍。
    "torch>=2.6,<2.7",
    # torchaudio 必须跟 torch 同 minor 版本（PyTorch 团队同步发布；torchaudio 2.11
    # 需要 torch 2.11，会动态链接 libcudart.so.13）。voxcpm 不限制 torchaudio 上限，
    # uv 默认拉最新 → ABI mismatch。这里跟 torch 同步钉住 2.6.x。
    "torchaudio>=2.6,<2.7",
    "nvidia-ml-py>=12",
    # 声纹克隆 Provider：默认随项目装；用户在「模型库」下载 VoxCPM 模型后即可用
    "voxcpm>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxcraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that load real models (deselect with -m 'not slow')"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/voxcraft"]
branch = true
omit = [
    "*/providers/mock.py",       # 仅测试用 Mock 实现
    "*/db/migrate.py",           # Alembic 驱动脚手架
    "*/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = false
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",  # Protocol / abstract stub
]
